# boost_server_client

./: CMakeLists.txt
client/: CMakeLists.txt  client_main.cxx
client_interface/: CMakeLists.txt  client_interface_main.cxx  tcp_client.cpp  tcp_client.h
common/: struct_header.h
serialize_deserialize_example/: buffer_serializer.h  serialize_example.cpp
server/: CMakeLists.txt  connection.hpp  sender_interface.h  server.cxx  server_connection.cxx  server_connection.h  server_main.cxx  session.h
